# ukncbtl-qt

emulator/: CMakeLists.txt  Common.cpp  Common.h  Settings.cpp  main.cpp  main.h  mainwindow.cpp  qconsoleview.cpp  qdialogs.cpp
emulator/emubase/: Board.cpp  Board.h  CMakeLists.txt  Defines.h  Disasm.cpp  Emubase.h  Floppy.cpp  Floppy.h  Hard.cpp  Hard.h  Memory.cpp  Processor.cpp  Processor.h  SoundAY.cpp  stdafx.h
emulator/lang/: ukncbtl_en.ts  ukncbtl_ru.ts
emulator/util/: CMakeLists.txt  Debug.cpp  Debug.h  WavPcmFile.cpp  WavPcmFile.h
